Fix textarea value blurr issue when inside container

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -10756,6 +10756,14 @@ tbody {
 
 }
 
+.textarea-wrapper{
+  border: 1px solid #dadcde;
+  .form-control.textarea{
+    border: 0px;
+    border-radius: 0px;
+  }
+}
+
 .tj-app-input-wrapper {
   display: flex;
 
